# DailyTaskPlanner

./: LICENSE  pyproject.toml
src/daily_task_planner/: main.py
src/daily_task_planner/model/: task_model.py
src/daily_task_planner/presenter/: tasks_presenter.py  today_presenter.py
src/daily_task_planner/view/: deliverables_list.py  main_window.py  tasks_pane.py  today_pane.py
src/planner/: main.py
src/planner/model/: task_model.py
src/planner/presenter/: tasks_presenter.py  today_presenter.py
src/planner/view/: main_window.py  tasks_pane.py  today_pane.py
