[project]
name = "daily-task-planner"
version = "0.1.0"
description = "A daily task planner desktop app built with PySide6 (MVP architecture)"
authors = [{ name = "Cajon Gonzales" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyside6>=6.7.0",
    "qtawesome",
    "qt-material",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[tool.uv]
package = true
